--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
     font-family: "caveat", cursive;
     color: var(--color-dark);
   }
+
+  html {
+    background: url('The_minions_in_Minions.jpg') ;
+    background-size: cover;
+  }
   .container {
     max-width: 600px;
     margin: 0 auto;
@@ -35,7 +40,7 @@
   main #input-textarea {
     border: 2px solid var(--color-primary);
     border-top-left-radius: 25px;
-    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
     outline: none;
     width: 80%;
     max-width: 30rem;
@@ -67,7 +72,8 @@
   }
   .output-div {
     border: 2px solid var(--color-primary);
-    border-top-left-radius: 25px;
+    background-color: #ffffff;
+    border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     outline: none;
     width: 80%;
@@ -91,12 +97,6 @@
     margin-bottom: 0.5rem;
   }
  
-.minion {
-    height:0px ;
-    width: 200px;
-}
-
-.minion2 {
-    text-align: right;
-    height: 0px;
+h4 {
+  color: #ffe33f;
 }
